unpackaged/main/default/objects/Post_Funding__c/Post_Funding__c.object-meta.xml
<CustomObject>
    <label>Post Funding</label>
    <nameField>
        <displayFormat>PF-{00000}</displayFormat>
        <label>Post Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>