unpackaged/main/default/objects/Post_Funding__c/fields/BK__c.field-meta.xml
<CustomField>
    <fullName>BK__c</fullName>
    <label>BK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BK Business</fullName>
            </value>
            <value>
                <fullName>BK PG</fullName>
            </value>
            <value>
                <fullName>BK Business/BK PG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>