unpackaged/main/default/objects/Post_Funding__c/fields/Business_Closed__c.field-meta.xml
<CustomField>
    <fullName>Business_Closed__c</fullName>
    <label>Business Closed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>