unpackaged/main/default/objects/Post_Funding__c/fields/Layered__c.field-meta.xml
<CustomField>
    <fullName>Layered__c</fullName>
    <label>Layered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1x</fullName>
            </value>
            <value>
                <fullName>2+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>