unpackaged/main/default/objects/Post_Funding__c/fields/Suspicious_Activity__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_Activity__c</fullName>
    <label>Suspicious Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banks – banks are altered in some way</fullName>
            </value>
            <value>
                <fullName>Identity – synthetic identity or identity theft</fullName>
            </value>
            <value>
                <fullName>Ownership – real business but wrong owner</fullName>
            </value>
            <value>
                <fullName>Business – business is not real</fullName>
            </value>
            <value>
                <fullName>Fraudulent Docs - non bank related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>